--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rgui-ui-uploader",
   "description": "Regular UI - Uploader",
-  "version": "0.2.0",
+  "version": "0.2.0-alpha",
   "author": "Rainfore <rainforest92@126.com>",
   "main": "./index.js",
   "repository": "regular-ui/ui-uploader",
@@ -11,7 +11,7 @@
   "keywords": ["regular", "ui", "rgui", "uploader"],
   "tags": ["regular", "ui", "rgui", "uploader"],
   "dependencies": {
-    "rgui-ui-base": "^0.2.0-alpha.4"
+    "rgui-ui-base": "^0.2.0-alpha.5"
   },
   "peerDependencies": {
     "regularjs": "^0.4.3"
